ticket:8822 merge from trunk r30691 through r32118